# scanpdf-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  scanpdf  scanpdf_preprocess.py
src/scanpdf_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
