[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanpdf-cli"
version = "0.1.0"
description = "CLI tool to preprocess scanned handwritten pages and build compressed PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ahmed Nader" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8"
]

[project.scripts]
scanpdf = "scanpdf.cli:main"
scanpdf-preprocess = "scanpdf.preprocess:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
